--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="app/css/bootstrap.min.css">
 </head>
 <body>
+	<div class="container-fluid">
+		<nav class="navbar">
+			<ul class="nav">
+			  <li class="nav-item">
+			    <a class="nav-link active" href="#">Компания</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">Персонал</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">Контакты</a>
+			  </li>
+			</ul>
 
+		</nav>
+	</div>
 </body>
 </html>
