--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<nav class="navbar">
+		<nav class="navbar ">
 			<ul class="nav">
 			  <li class="nav-item">
 			    <a class="nav-link active" href="#">Компания</a>
@@ -18,7 +18,10 @@
 			    <a class="nav-link" href="#">Контакты</a>
 			  </li>
 			</ul>
-
+			<div class="navbar-text">
+				<span>+7(232)-222-22-32</span> 
+				<span>renessone@mail.ru</span>
+			</div>
 		</nav>
 	</div>
 </body>
