--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<nav class="navbar ">
+		<nav class="navbar navbar-light bg-light fixed-top">
 			<ul class="nav">
 			  <li class="nav-item">
 			    <a class="nav-link active" href="#">Компания</a>
