--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="app/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="app/css/main.css">
 </head>
 <body>
-	<div class="container-fluid">
-		<nav class="navbar navbar-light bg-light fixed-top">
+
+	<div class="container-fluid head">
+		<nav class="navbar fixed-top">
 			<ul class="nav">
 			  <li class="nav-item">
 			    <a class="nav-link active" href="#">Компания</a>
