--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="app/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="app/css/main.css">
-</head>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	</head>
 <body>
-
 	<div class="container-fluid head">
-		<nav class="navbar fixed-top">
+		<nav class="navbar fixed-top bg-color-menu">
 			<ul class="nav">
-			  <li class="nav-item">
-			    <a class="nav-link active" href="#">Компания</a>
+			  <li class="nav-item ">
+			    
+			    <a class="nav-link text-white" href="#"> Компания</a>
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link" href="#">Персонал</a>
+			    <a class="nav-link text-white" href="#">Персонал</a>
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link" href="#">Контакты</a>
+			    <a class="nav-link text-white" href="#">Контакты</a>
 			  </li>
 			</ul>
 			<div class="navbar-text">
-				<span>+7(232)-222-22-32</span> 
-				<span>renessone@mail.ru</span>
+				<span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle"></i> +7(232)-222-22-32</span> 
+				<span class="text-white"><i class="far fa-envelope fa-lg align-middle"></i> renessone@mail.ru</span>
 			</div>
 		</nav>
 	</div>
