--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="app/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="app/css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -26,6 +27,13 @@
 				<span class="text-white"><i class="far fa-envelope fa-lg align-middle"></i> renessone@mail.ru</span>
 			</div>
 		</nav>
+		<div class="container-fluid btn-head-position">
+			<div class="logo">
+			</div>
+		</div>
+		<div class="container-fluid btn-head-position pt-3">
+			<button class="btn btn-center btn-style btn-lg">Скачать презентацию</button>
+		</div>
 	</div>
 </body>
 </html>
