--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 	<div class="container-fluid head">
 		<nav class="navbar fixed-top bg-color-menu">
 			<ul class="nav">
-			  <li class="nav-item ">
+			  <li class="nav-item mr-5">
 			    
-			    <a class="nav-link text-white" href="#"> Компания</a>
+			    <a class="nav-link text-white" href="#"><i class="fas fa-project-diagram fa-lg align-middle tool-rotate-180 icon-style"></i> Компания</a>
 			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#">Персонал</a>
+			  <li class="nav-item mr-5">
+			    <a class="nav-link text-white" href="#"><i class="fas fa-users fa-lg align-middle icon-style"></i> Персонал</a>
 			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#">Контакты</a>
+			  <li class="nav-item mr-5">
+			    <a class="nav-link text-white" href="#"><i class="fas fa-map-marker-alt fa-lg align-middle icon-style"></i> Контакты</a>
 			  </li>
 			</ul>
 			<div class="navbar-text">
-				<span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle"></i> +7(232)-222-22-32</span> 
-				<span class="text-white"><i class="far fa-envelope fa-lg align-middle"></i> renessone@mail.ru</span>
+				<span class="text-white"><i class="far fa-envelope fa-lg align-middle icon-style"></i> renessone@mail.ru</span><span class="text-white">|</span>
+				<span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle icon-style"></i> +7 (937) 324-11-41</span> 
 			</div>
 		</nav>
 		<div class="container-fluid btn-head-position">
@@ -33,6 +33,9 @@
 		</div>
 		<div class="container-fluid btn-head-position pt-3">
 			<button class="btn btn-center btn-style btn-lg">Скачать презентацию</button>
+		</div>
+		<div class="container text-logo">
+			<h1>Персонал:<br> поиск и управление</h1>
 		</div>
 	</div>
 </body>
