--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 <body>
 	<div class="container-fluid head">
-		<nav class="navbar fixed-top bg-color-menu">
+		<nav class="navbar bg-color-menu fixed-top">
 			<ul class="nav">
 			  <li class="nav-item mr-5">
 			    
@@ -36,6 +36,41 @@
 		</div>
 		<div class="container text-logo">
 			<h1>Персонал:<br> поиск и управление</h1>
+		</div>
+	</div>
+	<div class="container-fluid direction">
+		<div class="row justify-content-center">
+			<div class="col-6 text-center">
+				<h1>Наши направления</h1>
+			</div>
+		</div>
+		<div class="row justify-content-around mt-5">
+			<div class="col-4 text-left mb-5">
+				<h2>Логистика</h2>
+				<p class="text-wrap">передачи товаров, услуг или информации от поставщика к потребителю</p>
+			</div>
+			<div class="col-4 text-left mb-5">
+				<h2>Производство</h2>
+				<p>процесс создания человеческим трудом хозяйственных благ или предметов, служащих для удовлетворения человеческих потребностей.</p>
+			</div>
+			<div class="w-100"></div>
+			<div class="col-4 text-left mb-5">
+				<h2>Благоустройство</h2>
+				<p>комплекс мероприятий по содержанию территории, направленных на обеспечение и повышение комфортности условий проживания.</p>
+			</div>
+			<div class="col-4 text-left mb-5">
+				<h2>Ритейл</h2>
+				<p>розничная торговля, продажа товаров и или услуг конечному потребителю</p>
+			</div>
+			<div class="w-100"></div>
+			<div class="col-4 text-left">
+				<h2>АЗС</h2>
+				<p>комплекс оборудования на придорожной территории, предназначенный для заправки топливом транспортных средств</p>
+			</div>
+			<div class="col-4 text-left">
+				<h2>Гостеприимство</h2>
+				<p>разнообразие форм предпринимательства, специализирующихся на рынке услуг, связанном с приемом и обслуживанием гостей.</p>
+			</div>
 		</div>
 	</div>
 </body>
