--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 <body>
 	<div class="container-fluid head">
-		<nav class="navbar bg-color-menu fixed-top">
+		<nav class="navbar bg-color-menu">
 			<ul class="nav">
 			  <li class="nav-item mr-5">
 			    
