--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 <body>
 	<div class="container-fluid head">
-		<nav class="navbar bg-color-menu">
+		<nav class="navbar bg-color-menu fixed-top">
 			<ul class="nav">
 			  <li class="nav-item mr-5">
 			    
@@ -119,6 +119,13 @@
 						<p>разнообразие форм предпринимательства, специализирующихся на рынке услуг, связанном с приемом и обслуживанием гостей.</p>
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid direction-list">
+			<div class="row justify-content-center">
+			<div class="col-sm text-center">
+				<h1>Направление: АЗС</h1>
 			</div>
 		</div>
 	</div>
