--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 <body>
 	<div class="container-fluid head">
-		<nav class="navbar bg-color-menu fixed-top">
+		<nav class="navbar bg-color-menu">
 			<ul class="nav">
 			  <li class="nav-item mr-5">
 			    
@@ -122,10 +122,41 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid direction-list">
-			<div class="row justify-content-center">
-			<div class="col-sm text-center">
-				<h1>Направление: АЗС</h1>
+	<div class="container-fluid list">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h1>Направление: АЗС</h1>
+				</div>
+			</div>
+			<div class="row services">
+				<div class="col-lg-12">
+					<h2>Услуги:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-sm-6">
+					<ul>
+						<li>Продавец-кассир</li>
+						<li>Оператор</li>
+						<li>Подсобный работник</li>
+						<li>Заправщик</li>
+						<li>Кладовщик</li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<ul>
+						<li>Продавец-пример</li>
+						<li>Оператор-пример</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<button class="btn btn-outline-light form-btn text-uppercase font-weight-bold">
+						Все профессии
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
