--- a/index.html
+++ b/index.html
@@ -160,5 +160,12 @@
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid benefits">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h1>Ваши преимущества</h1>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
