--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 		</div>
 		<div class="row px-0 mx-0">
 			<div class="col-lg-12 px-0 mx-0">
-				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61cd39725189515cea82ba31bcedcd792e2f4c269262ecfad19a1f3433754913&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false">
-				</script>
+<!-- 				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61cd39725189515cea82ba31bcedcd792e2f4c269262ecfad19a1f3433754913&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false">
+				</script> -->
 			</div>
 		</div>
 	</div>
@@ -281,12 +281,16 @@
 	</div>
 	<div class="container-fluid footer">
 		<div class="row">
-			<div class="col-lg-3">
-				<span class="text-white"><i class="far fa-envelope fa-lg align-middle icon-style"></i> renessone@mail.ru</span>
-				<span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle icon-style"></i> +7 (937) 324-11-41</span> 
+			<div class="col-lg-2 px-0 col-12 offset-lg-1">
+			<ul class="footer-menu footer-menu-small">
+				<li class="footer-contact-list">Контакты</li>		
+				<li class="footer-contact-list"><span class="text-white"><i class="far fa-envelope fa-lg align-middle icon-style"></i> renessone@mail.ru</span></li>
+				<li class="footer-contact-list"><span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle icon-style"></i> +7 (937) 324-11-41</span> </li>	
+				<li class="footer-contact-list"><span class="text-white"><i class="fas fa-map-marker-alt fa-lg align-middle icon-style set-wr"></i> г. Москва, ул. Тест, дом 11</span> </li>
+			</ul>
 			</div>
-			<div class="d-none d-sm-block col-4 col-lg-2 offset-lg-3">
-				<ul>
+			<div class="d-none d-sm-block px-0 col-3 col-lg-2 offset-lg-2">
+				<ul class="footer-menu">
 					<li>Меню</li>
 					<li>О компании</li>
 					<li>Персонал</li>
@@ -294,20 +298,23 @@
 				</ul>
 				
 			</div>
-			<div class="d-none d-sm-block col-4 col-lg-2">
-				<ul>
+			<div class="d-none d-sm-block px-0 col-3 col-lg-2">
+				<ul class="footer-menu">
 					<li>Информация</li>
 					<li>Новости</li>
+					<li>Услуги</li>
 				</ul>
 			</div>
-			<div class="d-none d-sm-block col-lg-2"s>
-				<ul>
+			<div class="d-none d-sm-block px-0 col-3 col-lg-2">
+				<ul class="footer-menu">
 					<li>Соцсети</li>
+					<li>Вконтакте</li>
+					<li>Инстаграм</li>
 				</ul>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-2 text-center">
+			<div class="col-lg-3 px-0 offset-lg-1 text-left mt-3 small-center">
 				<small>Все права защищены © 1892 - 2020</small>
 			</div>
 		</div>
