--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 		</div>
 		<div class="row px-0 mx-0">
 			<div class="col-lg-12 px-0 mx-0">
-<!-- 				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61cd39725189515cea82ba31bcedcd792e2f4c269262ecfad19a1f3433754913&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false">
-				</script> -->
+				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61cd39725189515cea82ba31bcedcd792e2f4c269262ecfad19a1f3433754913&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false">
+				</script>
 			</div>
 		</div>
 	</div>
@@ -256,26 +256,21 @@
 				<h1>Новости</h1>
 			</div>
 		</div>
-			<div class="row px-0 mx-0 ">
-				<div class="col-lg-3 col-md-6 text-left">
+			<div class="row px-0 mx-0">
+				<div class="col-lg-4 col-md-6 text-center ">
 					<h2>Заголовок</h2>
 					<small>21 марта 2019</small>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
 				</div>
-				<div class="col-lg-3 col-md-6 text-left">
+				<div class="col-lg-4 col-md-6 text-center">
 					<h2>Заголовок</h2>
 					<small>21 марта 2019</small>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati.</p>
 				</div>
-				<div class="col-lg-3 col-md-6 text-left">
+				<div class="col-lg-4 col-md-6 text-center">
 					<h2>Заголовок</h2>
 					<small>21 марта 2019</small>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi?</p>
-				</div>
-				<div class="col-lg-3 col-md-6 text-left">
-					<h2>Заголовок</h2>
-					<small>21 марта 2019</small>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam!</p>
 				</div>
 			</div>
 	</div>
