--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				
 				<div class="col-lg-4 block-benefits">
 					<i class="icon-benefits box"></i>
-					<p>Маьериально-техническое сопровождение</p>
+					<p>Материально-техническое сопровождение</p>
 				</div>
 				
 				<div class="col-lg-12 block-benefits">
