--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 	<!-- ==================================================  -->
 
-	<div class="container-fluid direction">
+	<div class="container-fluid direction brbr-top">
 		<div class="row justify-content-center" >
 			<div class="col-sm text-center">
 				<h1 class="wow bounceInUp">Наши направления</h1>
@@ -257,36 +257,38 @@
 				<h1 class="wow bounceInUp">Наши проекты</h1>
 			</div>
 		</div>
-		<div class="row px-0 mx-0">
+		<div class="row px-0 mx-0 brbr">
 			<div class="col-lg-12 px-0 mx-0">
 				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61cd39725189515cea82ba31bcedcd792e2f4c269262ecfad19a1f3433754913&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false">
 				</script>
 			</div>
 		</div>
 	</div>
-	<div class="container news">
-		<div class="row text-center px-0 mx-0">
-			<div class="col-lg-12 px-0 mx-0">
-				<h1 class="wow bounceInUp">Новости</h1>
+	<div class="container-fluid news">
+		<div class="container">
+			<div class="row text-center px-0 mx-0">
+				<div class="col-lg-12 px-0 mx-0">
+					<h1 class="wow bounceInUp">Новости</h1>
+				</div>
 			</div>
+				<div class="row px-0 mx-0">
+					<div class="col-lg-4 col-md-6 text-center ">
+						<h2>Заголовок</h2>
+						<small>21 марта 2019</small>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
+					</div>
+					<div class="col-lg-4 col-md-6 text-center">
+						<h2>Заголовок</h2>
+						<small>21 марта 2019</small>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati.</p>
+					</div>
+					<div class="col-lg-4 col-md-6 text-center">
+						<h2>Заголовок</h2>
+						<small>21 марта 2019</small>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi?</p>
+					</div>
+				</div>
 		</div>
-			<div class="row px-0 mx-0">
-				<div class="col-lg-4 col-md-6 text-center ">
-					<h2>Заголовок</h2>
-					<small>21 марта 2019</small>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<h2>Заголовок</h2>
-					<small>21 марта 2019</small>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati.</p>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<h2>Заголовок</h2>
-					<small>21 марта 2019</small>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi?</p>
-				</div>
-			</div>
 	</div>
 	<div class="container-fluid footer">
 		<div class="row">
