Added footer line

--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@
 	</div>
 	<div class="container-fluid footer">
 		<div class="row">
-			<div class="col-lg-2 px-0 col-12 offset-lg-1">
+			<div class="col-lg-3 px-0 col-12 offset-lg-1 dec-line">
 			<ul class="footer-menu footer-menu-small">
 				<li class="footer-contact-list">Контакты</li>		
-				<li class="footer-contact-list"><span class="text-white"><i class="far fa-envelope fa-lg align-middle icon-style"></i> renessone@mail.ru</span></li>
-				<li class="footer-contact-list"><span class="text-white"><i class="fas fa-phone tool-rotate fa-lg align-middle icon-style"></i> +7 (937) 324-11-41</span> </li>	
-				<li class="footer-contact-list"><span class="text-white"><i class="fas fa-map-marker-alt fa-lg align-middle icon-style set-wr"></i> г. Москва, ул. Тест, дом 11</span> </li>
+				<li class="footer-contact-list"><span class="text-white small-contact"><i class="far fa-envelope fa-lg align-middle icon-style"></i> renessone@mail.ru</span></li>
+				<li class="footer-contact-list"><span class="text-white small-contact"><i class="fas fa-phone tool-rotate fa-lg align-middle icon-style"></i> +7 (937) 324-11-41</span> </li>	
+				<li class="footer-contact-list"><span class="text-white small-contact"><i class="fas fa-map-marker-alt fa-lg align-middle icon-style set-wr"></i> г. Москва, ул. Тест, дом 11</span> </li>
 			</ul>
 			</div>
-			<div class="d-none d-sm-block px-0 col-3 col-lg-2 offset-lg-2">
+			<div class="d-none d-sm-block px-0 col-3 col-lg-2 offset-lg-1">
 				<ul class="footer-menu">
 					<li>Меню</li>
 					<li>О компании</li>
